--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [IDENTIFICATION]
 # Set your user agent string here.
-USERAGENT = DEFAULT AGENT
+USERAGENT = IR F19 33259665, 19835496, 16426804
 
 [CONNECTION]
 HOST = styx.ics.uci.edu
@@ -17,4 +17,3 @@ SAVE = frontier.shelve
 
 # IMPORTANT: DO NOT CHANGE IT IF YOU HAVE NOT IMPLEMENTED MULTITHREADING.
 THREADCOUNT = 1
-
